@@ -1,3 +1,4 @@
 AUX genkernel.bash 2438 RMD160 b3d8e4436d8768c07d18c5aaff9c14fc16641729 SHA1 e15a9c6ef506aa6872a6a97d26751246dedded04 SHA256 e7de9771ba79ef878e2c9a21a1c1720f092c6047d3cc7d4a49ff6b90e7e2c248
-EBUILD genkernel-9999.ebuild 1905 RMD160 cf2f674ef426bd6f3eff7d101a3cae7258ec79d2 SHA1 0c1a2f9908dba58eaeac2d78816fd729cae69419 SHA256 eaeda82a22d93a5af0d6ae8bd37c67c37f847e55bb9cca8fd03a835ed5abf9a2
-MISC ChangeLog 684 RMD160 4f44199c39ee7f4b9f94d33fe18097fcb6c50331 SHA1 af1e3e078c78804ad65d483b5cee870d0db32ae9 SHA256 6b858da59149b138d85ca05d836cbccc47a003df04b9cf30896b87f964221fde
+EBUILD genkernel-9999.ebuild 1796 RMD160 9a916d3a4a7d80a7dd1fadf4a6f60e1d34315ee6 SHA1 6a4609ccfd269331446778e0f1ce8d92a7ead178 SHA256 f4c685874a6a6f9c5085809f2eb388f7942f73eed27648964b022f5b5cd3ecfa
+MISC ChangeLog 851 RMD160 ca0e41dbeb29db20b83555412ab4ae187771a133 SHA1 37f8b63dc2da9012d05edda92c02ba3f6a9117c4 SHA256 56a643d9f4c3aa55321da4f42b8003b3eed8f6972902298182af710a507f2fd9
+MISC metadata.xml 264 RMD160 61ac293e31501c99a53a7b02062116509a55a6e5 SHA1 3fa6da897b3012a3df857ccc3a8b204fca861cbe SHA256 80a94e475cebc484cb45a3d232fc8446db1eea8ae7c09c52680f25fde0784a34
