@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> +metadata.xml,
+  genkernel-9999.ebuild:
+  Removed src_unpack and moved the relevant line into src_install.
+
   11 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name>
   +genkernel-9999.ebuild, +files/genkernel.bash:
   Ebuild is copied from the main Portage tree and completely rewritten by me.
